Fix URL overflow in reports
Fixes #100

--- a/website_checker/report/templates/layout.css
+++ b/website_checker/report/templates/layout.css
@@ -247,6 +247,8 @@ h6 {
   flex: 1;
   justify-content: start;
   align-items: center;
+
+  overflow-wrap: anywhere;
 }
 
 .table-row__entry--heading {
